Corrected mobile presentation for items with long titles, and question titles not wrapping.

--- a/style/_quizAdp.scss
+++ b/style/_quizAdp.scss
@@ -4,9 +4,6 @@
 	direction: rtl;
 	padding-top: 2rem;
 }
-#questionList {
-	white-space: nowrap;
-}
 .quizQuestion {
 	position: relative;
 	p {
